--- a/listener/listener.Web/Views/Home/Index.cshtml
+++ b/listener/listener.Web/Views/Home/Index.cshtml
@@ -20,10 +20,15 @@
     <script src="~/Scripts/d3/d3.js"></script>
     <script src="~/Scripts/c3/c3.min.js"></script>
     <link href="~/Scripts/c3/c3.min.css" rel="stylesheet" type="text/css">
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 
     <script type="text/javascript">
         var maxDataLen = 1000;
         var chart, lineData = ["host"];
+
+        for (var i = 1; i < maxDataLen; i++) {
+            lineData[i] = 0;
+        }
 
         $(function() {
             $.connection.hub.start();
@@ -40,8 +45,7 @@
                 });
             }, 500);
 
-            hub.client.hostValue = function(value) {
-                //console.log(value);
+            var pushValue = function(value) {
                 if (lineData.length >= maxDataLen) {
                     lineData.shift();
                     lineData.shift();
@@ -49,6 +53,33 @@
                 }
 
                 lineData.push(value);
+            }
+
+            //Make the chart move on
+            setInterval(function() {
+                pushValue(0);
+            }, 1000);
+
+            hub.client.hostValue = function(value) {
+                pushValue(value);
+            };
+
+            hub.client.hostStatus = function(status) {
+                console.log(status);
+
+                var statusEl = $("#status");
+                statusEl.text(status);
+
+                statusEl.removeClass();
+                statusEl.addClass("label");
+
+                if (status === "Free") {
+                    statusEl.addClass("label-success");
+                } else if (status === "Occupied") {
+                    statusEl.addClass("label-danger");
+                } else if (status === "Unknown") {
+                    statusEl.addClass("label-warning");
+                }
             };
         });
 
@@ -88,7 +119,9 @@
 }
 
 <div class="container">
-    <h3 class="page-header">Ping-pong table status (2nd floor)</h3>
+    <h3 class="page-header">Ping-pong table status (2nd floor):
+        <span id="status" class="label label-warning">Unknown</span> 
+    </h3>
     <div class="row">
         <div id="chart"></div>
     </div>
