--- a/listener/listener.Web/Views/Home/Index.cshtml
+++ b/listener/listener.Web/Views/Home/Index.cshtml
@@ -19,102 +19,125 @@
     <script src="~/signalr/hubs"></script>
     <script src="~/Scripts/d3/d3.js"></script>
     <script src="~/Scripts/c3/c3.min.js"></script>
+    <script src="~/Scripts/JSMQ.js"></script>
+
     <link href="~/Scripts/c3/c3.min.css" rel="stylesheet" type="text/css">
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 
     <script type="text/javascript">
-        var maxDataLen = 1000;
-        var chart, lineData = ["host"];
+    var maxDataLen = 100;
+    var chart, lineData = ["host"];
 
-        for (var i = 1; i < maxDataLen; i++) {
-            lineData[i] = 0;
-        }
+    for (var i = 1; i < maxDataLen; i++) {
+        lineData[i] = 0;
+    }
 
-        $(function() {
-            $.connection.hub.start();
+    $(function () {
+        var dealer = new JSMQ.Dealer();
+        dealer.connect("@ViewBag.Endpoint");
 
-            var hub = $.connection.hostHub;
+        var subscriber = new JSMQ.Subscriber();
+        subscriber.connect("@ViewBag.Endpoint");
+        subscriber.subscribe("");
 
-            chart = initChart();
+        chart = initChart();
 
-            setInterval(function() {
-                chart.load({
-                    columns: [
-                        lineData
-                    ]
-                });
-            }, 500);
+        setInterval(function () {
+            chart.load({
+                columns: [
+                    lineData
+                ]
+            });
+        }, 1000);
 
-            var pushValue = function(value) {
-                if (lineData.length >= maxDataLen) {
-                    lineData.shift();
-                    lineData.shift();
-                    lineData.unshift('host');
-                }
-
-                lineData.push(value);
+        var pushChartValue = function (value) {
+            if (lineData.length >= maxDataLen) {
+                lineData.shift();
+                lineData.shift();
+                lineData.unshift('host');
             }
 
-            //Make the chart move on
-            setInterval(function() {
-                pushValue(0);
-            }, 1000);
-
-            hub.client.hostValue = function(value) {
-                pushValue(value);
-            };
-
-            hub.client.hostStatus = function(status) {
-                console.log(status);
-
-                var statusEl = $("#status");
-                statusEl.text(status);
-
-                statusEl.removeClass();
-                statusEl.addClass("label");
-
-                if (status === "Free") {
-                    statusEl.addClass("label-success");
-                } else if (status === "Occupied") {
-                    statusEl.addClass("label-danger");
-                } else if (status === "Unknown") {
-                    statusEl.addClass("label-warning");
-                }
-            };
-        });
-
-        function initChart() {
-            return c3.generate({
-                bindto: '#chart',
-                data: {
-                    columns: [
-                        lineData
-                    ]
-                },
-                axis: {
-                    y: {
-                        max: 200,
-                        min: 0
-                    },
-                    x: {
-                        tick: {
-                            count: 10,
-                            format: function(x) { return ''; }
-                        }
-                    }
-                },
-                tooltip: {
-                    show: false
-                },
-                transition: {
-                    duration: 0
-                },
-                point: {
-                    show: false
-                }
-            });
+            lineData.push(value);
         }
-    </script>
+
+        var setStatus = function (status) {
+            var statusEl = $("#status");
+            statusEl.text(status);
+
+            statusEl.removeClass();
+            statusEl.addClass("label");
+
+            if (status === "Free") {
+                statusEl.addClass("label-success");
+            } else if (status === "Occupied") {
+                statusEl.addClass("label-danger");
+            } else if (status === "Unknown") {
+                statusEl.addClass("label-warning");
+            }
+        }
+
+        subscriber.sendReady = function () {
+            setStatus("Free");
+        };
+
+        subscriber.deactivated_c = function () {
+            setStatus("Unknown");
+        };
+
+        var statusTimer;
+        //Table event received
+        subscriber.onMessage = function (message) {
+            pushChartValue(100);
+            setStatus("Occupied");
+
+            if (statusTimer) {
+                clearInterval(statusTimer);
+                statusTimer = undefined;
+            }
+
+            statusTimer = setInterval(function () {
+                setStatus("Free");
+            }, 30000);//No activity during 30 sec is considered as free table
+        };
+
+        //Make the chart move on
+        setInterval(function () {
+            pushChartValue(0);
+        }, 1000);
+    });
+
+    function initChart() {
+        return c3.generate({
+            bindto: '#chart',
+            data: {
+                columns: [
+                    lineData
+                ]
+            },
+            axis: {
+                y: {
+                    max: 200,
+                    min: 0
+                },
+                x: {
+                    tick: {
+                        count: 10,
+                        format: function (x) { return ''; }
+                    }
+                }
+            },
+            tooltip: {
+                show: false
+            },
+            transition: {
+                duration: 0
+            },
+            point: {
+                show: false
+            }
+        });
+    }
+</script>
 
 }
 
