--- a/listener/listener.Web/Views/Home/Index.cshtml
+++ b/listener/listener.Web/Views/Home/Index.cshtml
@@ -15,8 +15,6 @@
         }
     </style>
 
-    <script src="~/Scripts/jquery.signalR-2.2.0.js"></script>
-    <script src="~/signalr/hubs"></script>
     <script src="~/Scripts/d3/d3.js"></script>
     <script src="~/Scripts/c3/c3.min.js"></script>
     <script src="~/Scripts/JSMQ.js"></script>
@@ -27,6 +25,9 @@
     <script type="text/javascript">
     var maxDataLen = 100;
     var chart, lineData = ["host"];
+    var free = "Free";
+    var occupied = "Occupied";
+    var unknown = "Unknown";
 
     for (var i = 1; i < maxDataLen; i++) {
         lineData[i] = 0;
@@ -67,28 +68,28 @@
             statusEl.removeClass();
             statusEl.addClass("label");
 
-            if (status === "Free") {
+            if (status === free) {
                 statusEl.addClass("label-success");
-            } else if (status === "Occupied") {
+            } else if (status === occupied) {
                 statusEl.addClass("label-danger");
-            } else if (status === "Unknown") {
+            } else if (status === unknown) {
                 statusEl.addClass("label-warning");
             }
         }
 
         subscriber.sendReady = function () {
-            setStatus("Free");
+            setStatus(free);
         };
 
         subscriber.deactivated_c = function () {
-            setStatus("Unknown");
+            setStatus(unknown);
         };
 
         var statusTimer;
         //Table event received
         subscriber.onMessage = function (message) {
             pushChartValue(100);
-            setStatus("Occupied");
+            setStatus(occupied);
 
             if (statusTimer) {
                 clearInterval(statusTimer);
@@ -96,7 +97,7 @@
             }
 
             statusTimer = setInterval(function () {
-                setStatus("Free");
+                setStatus(free);
             }, 30000);//No activity during 30 sec is considered as free table
         };
 
