Deployment and statistics tracking

--- a/listener/listener.Web/Views/Shared/_Layout.cshtml
+++ b/listener/listener.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,30 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <!-- Start of StatCounter Code for Default Guide -->
+    <script type="text/javascript">
+        var sc_project = 10477975;
+        var sc_invisible = 1;
+        var sc_security = "44261f1c";
+        var scJsHost = (("https:" == document.location.protocol) ?
+        "https://secure." : "http://www.");
+        document.write("<sc" + "ript type='text/javascript' src='" +
+        scJsHost +
+        "statcounter.com/counter/counter.js'></" + "script>");
+    </script>
+    <noscript>
+        <div class="statcounter">
+            <a title="shopify
+analytics ecommerce tracking"
+               href="http://statcounter.com/shopify/" target="_blank">
+                <img class="statcounter"
+                     src="http://c.statcounter.com/10477975/0/44261f1c/1/"
+                     alt="shopify analytics ecommerce
+tracking">
+            </a>
+        </div>
+    </noscript>
+    <!-- End of StatCounter Code for Default Guide -->
 </head>
 <body>
     @RenderBody()
